attempt to resolve white space issue

--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -94,6 +94,12 @@
     }
 }
 
+/*GAME PAGE STYLING*/
+
+.container {
+    overflow: hidden;
+}
+
 /*GAME OVER PAGE STYLING*/
 
 .game-over-container {
